Changed Ministries Section

--- a/crystal-template/css/main.css
+++ b/crystal-template/css/main.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,600');
+
+.rounded-circle {
+  margin-bottom: 10px;
+}
+
 body {
   font-family: 'Lato', sans-serif;
   color: #333;
