--- a/less/main.less
+++ b/less/main.less
@@ -5,6 +5,11 @@
 //Colors
 @preset: #4676fa;
 
+#map {
+	height: 400px;
+	width: 100%;
+}
+
 //Core Styles
 body{
 	font-family: 'Lato', sans-serif;
