--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,11 @@
   margin-bottom: 10px;
 }
 
+#map{
+	height: 400px;
+	width: 100%;
+}
+
 body {
   font-family: 'Lato', sans-serif;
   color: #333;
